# src/routes/class.rs
@@ -2,7 +2,10 @@ use serde::Serialize;
 use warp::{http::StatusCode, Filter, Rejection, Reply};
 
 use super::{
-    globals::{PaginatedQueryableListRequest, SimpleSuccessResponse},
+    globals::{
+        OccupanciesListResponse, OccupanciesRequest, PaginatedQueryableListRequest,
+        SimpleSuccessResponse,
+    },
     ErrorCode, FailureResponse,
 };
 use db::{
@@ -59,11 +62,20 @@ pub fn routes(db: &Db) -> impl Filter<Extract = (impl Reply,), Error = Rejection
         .and(delayed(db))
         .boxed();
 
+    let occupancies_get_route = warp::path!("api" / "classes" / u32 / "occupancies")
+        .and(warp::get())
+        .and(with_db(db.clone()))
+        .and(warp::query::<OccupanciesRequest>())
+        .and_then(occupancies_get)
+        .and(delayed(db))
+        .boxed();
+
     list_route
         .or(create_route)
         .or(delete_route)
         .or(get_route)
         .or(update_route)
+        .or(occupancies_get_route)
 }
 
 #[derive(Serialize)]
@@ -179,4 +191,47 @@ async fn update(
             StatusCode::NOT_FOUND,
         ))
     }
+}
+
+async fn occupancies_get(
+    id: u32,
+    db: Db,
+    request: OccupanciesRequest,
+) -> Result<impl warp::Reply, warp::Rejection> {
+    let db = db.lock().await;
+
+    if db.class_get(id).is_none() {
+        return Ok(warp::reply::with_status(
+            warp::reply::json(&FailureResponse::new(ErrorCode::InvalidID)),
+            StatusCode::NOT_FOUND,
+        ));
+    }
+
+    let occupancies_list = db.occupancies_list(request.start, request.end);
+
+    let occupancies_list = occupancies_list
+        .into_iter()
+        .filter(|o| match o.subject_id {
+            Some(subject_id) => {
+                let subject = db
+                    .subject_get(subject_id)
+                    .expect("should be a valid reference");
+
+                let class = db
+                    .class_get(subject.class_id)
+                    .expect("should be a valid reference");
+
+                class.id == id
+            }
+            None => false,
+        })
+        .collect();
+
+    let response =
+        OccupanciesListResponse::from_list(&db, occupancies_list, request.occupancies_per_day);
+
+    Ok(warp::reply::with_status(
+        warp::reply::json(&response),
+        StatusCode::OK,
+    ))
 }
