# src/routes/classroom.rs
@@ -2,7 +2,10 @@ use serde::Serialize;
 use warp::{http::StatusCode, Filter, Rejection, Reply};
 
 use super::{
-    globals::{PaginatedQueryableListRequest, SimpleSuccessResponse},
+    globals::{
+        OccupanciesListResponse, OccupanciesRequest, PaginatedQueryableListRequest,
+        SimpleSuccessResponse,
+    },
     ErrorCode, FailureResponse,
 };
 use db::{models::Classroom, ClassroomUpdate, Database, Db, NewClassroom};
@@ -56,11 +59,20 @@ pub fn routes(db: &Db) -> impl Filter<Extract = (impl Reply,), Error = Rejection
         .and(delayed(db))
         .boxed();
 
+    let occupancies_get_route = warp::path!("api" / "classrooms" / u32 / "occupancies")
+        .and(warp::get())
+        .and(with_db(db.clone()))
+        .and(warp::query::<OccupanciesRequest>())
+        .and_then(occupancies_get)
+        .and(delayed(db))
+        .boxed();
+
     list_route
         .or(create_route)
         .or(delete_route)
         .or(get_route)
         .or(update_route)
+        .or(occupancies_get_route)
 }
 
 #[derive(Serialize)]
@@ -165,4 +177,34 @@ async fn update(
             StatusCode::NOT_FOUND,
         ))
     }
+}
+
+async fn occupancies_get(
+    id: u32,
+    db: Db,
+    request: OccupanciesRequest,
+) -> Result<impl warp::Reply, warp::Rejection> {
+    let db = db.lock().await;
+
+    if db.classroom_get(id).is_none() {
+        return Ok(warp::reply::with_status(
+            warp::reply::json(&FailureResponse::new(ErrorCode::InvalidID)),
+            StatusCode::NOT_FOUND,
+        ));
+    }
+
+    let occupancies_list = db.occupancies_list(request.start, request.end);
+
+    let occupancies_list = occupancies_list
+        .into_iter()
+        .filter(|o| o.classroom_id == Some(id))
+        .collect();
+
+    let response =
+        OccupanciesListResponse::from_list(&db, occupancies_list, request.occupancies_per_day);
+
+    Ok(warp::reply::with_status(
+        warp::reply::json(&response),
+        StatusCode::OK,
+    ))
 }
